# NIT-ICCV17Challenge

./: .gitignore  LICENSE  README.md
1c++/: CMakeLists.txt
1c++/include/: misc.hpp
1c++/include/ActionUnitIntensityEstimation/: AU.hpp
1c++/include/BinaryFile/: BinaryFile.hpp
1c++/include/FaceBase/: FaceDetector2D.hpp  FaceLib.hpp  FaceLibDlib.hpp  FaceRegistration.hpp  FaceRegistrationAffineMeanShape.hpp
1c++/src/: AU.cpp  FaceRegistrationAffineMeanShape.cpp  createFileNameList.cpp  detectAUsOld.cpp  detectFace.cpp  detectLandmarks.cpp  main.cpp  misc.cpp  recognizeFaces.cpp
2matlab/: DescriptorExtraction18.m  ImportData.m  TrainAndTestOneLinearRankSVM.m  main.m  predict_rank_svm.m  train_rank_svm.m  zerocross.m
2matlab/+libDataset/: create_dataset.m  denormalize.m  externals.txt  normalize.m  redistribute.m  redistribute_param.m  split.m  split_param.m  split_random.m  split_random_subjects.m  split_stratified.m  util_add_dataset.m  util_apply_predictor_idx.m  util_apply_sample_idx.m  util_check_dataset.m
2matlab/+libDataset/private/: balance.m  downsample_kmeans.m  downsample_random.m  upsample_random.m  upsample_smote.m
2matlab/+libML/: cross_db_validate.m  cross_db_validate_param.m  cross_validate.m  cross_validate_param.m  externals.txt  ml_param.m  param_grid_search.m  predict.m  train.m
2matlab/+libPerformance/: externals.txt  plot2D.m  value.m  vector.m
2matlab/+libPerformance/private/: area_under_curve.m  confusionMatrix.m  performance_ICC.m
2matlab/+libSvm/: externals.txt  predict.m  svm_param.m  train.m
2matlab/+libSvm/private/: libsvmpredict.mexw64  libsvmread.mexw64  libsvmtrain.mexw64  libsvmwrite.mexw64  makeliblinear.m  makelibsvm.m  param_search.m  predict_fast.m
2matlab/+libSvm/private/libsvm-3.20/: svm.cpp  svm.h
2matlab/+libUtil/: colorspace.mexw64  datasample.m  dir.m  externals.txt  meanstd_elementwise.m  parallelcoords_plus.m
(+1 files in other folders)
